# app/Http/Controllers/PixController.php
@@ -73,9 +73,61 @@ class PixController extends BaseController
         $statusCode = 200;
         return response()->json(['data' => $pix,'message' => $messageText, 'status' => true], $statusCode);
     }
-
-
-
+    /**
+     * @OA\Post(
+     *     path="/api/pix",
+     *     tags={"Pix"},
+     *     summary="Create a new Pix",
+     *     description="Create a new Pix.",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="amount",
+     *                 type="string",
+     *                 description="The amount of the Pix"
+     *             ),
+     *             @OA\Property(
+     *                 property="paymentId",
+     *                 type="string",
+     *                 description="The payment ID of the Pix"
+     *             ),
+     *             @OA\Property(
+     *                 property="customer",
+     *                 type="object",
+     *                 description="The customer details",
+     *                 @OA\Property(
+     *                     property="document",
+     *                     type="string",
+     *                     description="The customer's document"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="firstName",
+     *                     type="string",
+     *                     description="The customer's first name"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/PixResource")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Forbidden"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Entity"
+     *     )
+     * )
+     */
     public function create(Request $request): JsonResponse
     {
       $data = $request->all();
@@ -84,7 +136,38 @@ class PixController extends BaseController
       $pix = $this->service->store($data);
       return response()->json(['data' => $pix, 'message' => $messageText, 'status' => true], $statusCode);
     }
-
+    /**
+     * @OA\Get(
+     *     path="/api/pix/{id}",
+     *     tags={"Pix"},
+     *     summary="Get a specific Pix",
+     *     description="Get a specific Pix by its ID.",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the Pix",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/PixResource")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Forbidden"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not Found"
+     *     )
+     * )
+     */
     public function find($id): JsonResponse
     {
       $messageText = 'Pix '.$id.' encontrado com sucesso!';
@@ -92,7 +175,38 @@ class PixController extends BaseController
       $pix = $this->service->getById($id);
       return response()->json(['data' => $pix, 'message' => $messageText, 'status' => true], $statusCode);
     }
-
+    /**
+     * @OA\Patch(
+     *     path="/api/pix/{id}",
+     *     tags={"Pix"},
+     *     summary="Update a specific Pix",
+     *     description="Update a specific Pix by its ID.",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the Pix",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/PixResource")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="Forbidden"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not Found"
+     *     )
+     * )
+     */
     public function update(Request $request, $id) : JsonResponse
     {
       $data = $request->all();
